--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "buffer": "^6.0.3",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.323.0",
     "plotly.js": "^2.27.0",
