--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
-    "buffer": "^6.0.3",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.323.0",
     "plotly.js": "^2.27.0",
@@ -23,6 +22,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
